--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,8 +74,8 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 
 android {
     ndkVersion rootProject.ext.ndkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
-    compileSdk rootProject.ext.compileSdkVersion
+    buildToolsVersion "33.0.0" // rootProject.ext.buildToolsVersion 대신 직접 버전 입력
+    compileSdkVersion rootProject.ext.compileSdkVersion
 
     namespace "com.pestdetector"
     defaultConfig {
@@ -98,8 +98,6 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
